# MyDownlander

./: CLAUDE.md  MYDOWNLOADER_SPEC.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: build-linux.yml  build-macos.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cookie_manager.rs  downloader.rs  lib.rs  main.rs  tray.rs  updater.rs
src/components/: AuthModal.tsx  DownloadQueue.tsx  FormatPicker.tsx  SettingsPanel.tsx  ThemeToggle.tsx  UrlInput.tsx
src/hooks/: useClipboard.ts  useDownloads.ts  useT.ts
src/i18n/: index.ts
src/store/: downloads.ts  language.ts
src/styles/: glass.css  globals.css
